# t3-chomper

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
.ipynb_checkpoints/: t3_extractor-checkpoint.py  test_xml-checkpoint.ipynb
dev/: 25F-25012_CPion Datapilot fragment_16OCNT-0000007-AA-001.xmol_Fast UV psKa.t3r  pka_results.csv
powershell_scripts/: create_experiment_folder.ps1  parse_t3r_filenames.ps1  run_extract.ps1  run_gencsv.ps1
t3_chomper/: csv_generator.py  extractors.py  formatters.py  logging.py  parsers.py  t3_extractor.py
test/: fixtures.py  test_extractor.py  test_formatters.py  test_parsers.py
test/data/: fast_uv_OCNT-0000018-AQ-001.t3r  logp_OCNT-0000018-AQ-001_octanol.t3r
