[tool.poetry]
name = "t3-chomper"
version = "0.1.0"
description = "Parse pKa data from Sirus T3 XML files"
authors = ["hugo.macdermott-opeskin@omsf.io"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1"
pandas = "^2.0"
xmltodict = "^0.13"

[dependency-groups]
dev = [
    "black (>=25.1.0,<26.0.0)"
]

[tool.poetry.scripts]
t3pka = "t3_chomper.t3_extractor:pka"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

